# fil-crm

./: .env.demo.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  demo_start.sh  pyproject.toml  start.sh
backend/: auth.py  currency.py  db.py  main.py  morelogin.py  security.py  seed.py  worker.py
backend/lib/: stats.py
backend/migrations/: 001_init.sql  002_design_adapt.sql  003_apartment_source.sql  004_cleaning_due_at.sql  (+6 more)
docs/: demo-seed.sqlite3  nginx-daily-rental-crm.conf  nginx-sakha-gay.conf
frontend/: README.md  package-lock.json  package.json  vite.config.js
scripts/: artyom_import_bookings.py  artyom_load_passport.py  artyom_parse_bookings.py  artyom_prod_apply.py  artyom_prod_dump.py  artyom_reset.py  backfill_callsigns.py  bulk_import.py  demo_make_seed.py  demo_reset.py  fetch_links.py  generate_baseline_expenses.py  import_via_httpx.py  manual_import.py  refresh_rates.py  seed_credentials.py  tg_collect_artyom.py  tg_dump_chat.py  tg_list_dialogs.py
tests/: conftest.py  e2e_capture_html.py  e2e_listing_urls.txt  e2e_morelogin_open.py  e2e_parse_url.py  test_apartment_cover.py  test_apartments.py  test_apartments_baseline.py  test_apartments_search.py  test_auth_login.py  test_authz.py  test_baseline_script.py  test_bookings.py  test_cleaning_schedule.py  test_clients.py  test_currency.py  test_dashboard.py  test_dev_auth.py  test_dev_auth_only.py  test_expenses.py  test_finance.py  test_parser_cover.py  test_parser_doska.py  test_parser_youla.py  test_parsers_router.py  test_reports.py  test_smoke.py  test_stats.py  test_users_create.py
(+98 files in other folders)
