[project]
name = "fil-crm"
version = "0.1.0"
description = "CRM для посуточной аренды в Якутске"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
